--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Connectbox Reports",
-  "name": "Connectbox reporting",
+  "short_name": "WayPoint Reports",
+  "name": "WayPoint reporting",
   "icons": [
     {
       "src": "favicon.ico",
