removal of all MV text

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WayPoint Reports",
-  "name": "WayPoint reporting",
+  "short_name": "ConnectBox Reports",
+  "name": "ConnectBox reporting",
   "icons": [
     {
       "src": "favicon.ico",
